--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
         <div><span>Then the total fare is Rs </span><span id="fare"></span></div>
         <br>
         <div>Problem 4</div>
-        <div>Your problem 4 html goes here</div>
+        <div>Given Rs </span><span id="notes"></span><span> notes</span></div>
+        <div>When I count the money</div>
+        <div>Then my total is Rs </span><span id="total"></span></div>
         <br>
         <div>Problem 5</div>
-        <div>Your problem 5 html goes here</div>
+        <div>Given an advertising text:</div>
+        <div><span id="oldAd1"></span></div>
+        <div><span id="oldAd2"></span></div>
+        <div><span id="oldAd3"></span></div>
+        <div><span>When I correct the text</span></div>
+        <div><span> Then the result should be:</span></div>
+        <div><span id =newAd></span></div>
+        <div>count: <span id =wordCount></span></div>
     </body>
 </html>
